Morning components livecode

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,10 @@
 /* --- Components design --- */
 @import url("components/flexbox.css");
 @import url("components/container.css");
-
+@import url("components/avatar.css");
+@import url("components/buttons.css");
+@import url("components/banner.css");
+@import url("components/cards.css");
 
 
 
@@ -17,6 +20,7 @@ body {
   margin: 0;
   background-color: rgb(240,240,240);
 }
+
 h1, h2, h3 {
   font-family: "Poppins", "Helvetica", "sans-serif";
 }
