--- a/css/components/flexbox.css
+++ b/css/components/flexbox.css
@@ -11,14 +11,14 @@
   
   /* align the content horizontally (if direction row) */
 
-  justify-content: center;
+  /* justify-content: center; */
   /* justify-content: start; */
   /* justify-content: end; */
   /* justify-content: space-between; */
   /* justify-content: space-around; */
-  /* gap: 8px; */
+  /* gap: 24px; */
   /* align items vertically (if direction row) */
-  align-items: center;
+  /* align-items: center; */
   /* align-items: start; */
   /* align-items: end; */
   
@@ -32,7 +32,7 @@
   height: 200px;
   /* text-align: center; */
 }
-/* 
-.item {
+
+/* .item {
   flex-grow: 1;
 } */
